[project]
name = "agentforce_interactive"
version = "0.1.0"
description = "Agentforce_interactive using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.5.0",
    "litellm",
]

[project.scripts]
agentforce_interactive = "agentforce_interactive.main:run"
run_crew = "agentforce_interactive.main:run"
train = "agentforce_interactive.main:train"
replay = "agentforce_interactive.main:replay"
test = "agentforce_interactive.main:test"
run_with_trigger = "agentforce_interactive.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.crewai.llm]
provider = "openai"
config = { model = "gpt-5.1", temperature = 0.1 }
